<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">reboottool</string>
    <string name="action_settings">Settings</string>
    <string name="reclen">wait for set</string>
    <string name="myname">giec mid</string>
    <string name="rctime">reboot time not set</string>
    <string name="reboot_time">请输入需要重启的次数</string>
    <string name="reboot_rely">请输入重启的延迟时间</string>
    <string name="state">请在使用时将锁屏设置为“none”</string>

</resources>